[project]
name = "langchain-response-tracing"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.3.1",
    "langchain-openai>=1.1.0",
    "langchain>=1.1.0",
    "pangea-sdk>=6.13.0",
    "pydantic>=2.12.5",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
